resources/css/app.css
@import '_variables.css';
@import '_fixes.css';
@import "_theme.scss";

@tailwind base;
@tailwind components;
@tailwind utilities;

[x-cloak] {
    display: none;
}

pre.shiki {
    @apply !bg-code-background w-full overflow-x-auto rounded-xl text-sm md:text-base;
}

pre.shiki code {
    @apply max-w-[200px] block;
}

.markdown-text {
    @apply prose-a:text-font-second
    prose-code:text-font-second
    prose-blockquote:text-font-second
    prose-h1:text-font-second
    prose-h2:text-font-second
    prose-h3:text-font-second
    prose-h4:text-font-second
    prose-h5:text-font-second
    prose-h6:text-font-second
}

